# ros2-demo_ws

./: .gitignore
ros2启动/: ros2启动教程.md
ros2启动/figures/: 3png
ros导航部分/: ros导航部分.docx  ros导航部分.md
src/RL_PPO/: package.xml  setup.cfg  setup.py
src/RL_PPO/RL_PPO/: __init__.py  deploy_node.py  navigation_env.py  ppo_agent.py  trainer.py
src/RL_PPO/config/: ppo_config.yaml
src/RL_PPO/launch/: deploy.launch.py  train.launch.py  train_with_tb.launch.py
src/autopartol/: package.xml  setup.cfg  setup.py
src/autopartol/autopartol/: partol_node.py  speaker.py
src/autopartol/autopartol/launch/: autopartol.launch.py
src/autopartol/config/: partol_config.yaml
src/autopartol_interfaces/: CMakeLists.txt  package.xml
src/bt_package/: package.xml  setup.cfg  setup.py
src/bt_package/bt_package/: bt_navigator.py  set_init_pose.py  waypoint_follow.py
src/bt_package/launch/: industrial_patrol.launch.py
src/bt_package/resource/:  groot_config.xml  forward_behavior_tree1.xml  groot_nodes_model.xml
src/bt_tree/: CMakeLists.txt  package.xml
src/bt_tree/behavior_trees/: navigate_to_pose.xml
src/bt_tree/launch/: bt_navigator.launch.py
src/bt_tree/src/: bt_navigator.cpp
src/student_starter_kit/: package.xml  setup.cfg  setup.py
src/student_starter_kit/config/: map_builder.lua  nav2_params.yaml  pose_graph.lua  trajectory_builder_2d.lua
src/student_starter_kit/launch/: cartographer_mapping.launch.py  display_model.launch.py  gazebo.launch.py  navigation.launch.py
src/student_starter_kit/maps/: 0319map.pgm  0319map.yaml  my_map.pgm  my_map.yaml  room.pgm  room.yaml
src/student_starter_kit/rosbags/slam_data/: metadata.yaml
src/student_starter_kit/rviz/: model.rviz  my_rviz.rviz  rviz.rviz
src/student_starter_kit/script/: __init__.py  automatic_mapping.py  get_pose.py  keyboard_slam_control.py  nav2pose.py  smart_explor.py  waypoint_flollow.py
src/student_starter_kit/urdf/: turtlebot3_waffle.urdf.xacro
src/student_starter_kit/worlds/demo/: nodes.xml  test1.cpp
